--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,11 +28,12 @@ $tabs-link-padding: 0.5em 1.5em;
   color: $primary;
 }
 
+.brand a:hover, .brand a {
+  color: $orange;
+}
+
 @import "../node_modules/bulma/sass/utilities/_all";
 @import "../node_modules/bulma/sass/base/_all.sass";
 @import "../node_modules/bulma/sass/components/navbar.sass";
 @import "../node_modules/bulma/sass/components/tabs.sass";
-
-.brand a:hover, .brand a {
-  color: $orange;
-}
+@import "../node_modules/bulma/sass/components/card.sass";
