Finish landing page

--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -5,8 +5,8 @@
   height: calc(100vh - 52px);
 }
 
-.example-card {
-    width: 200px;
+.card {
+    width: 300px;
     height: 40%;
     text-align: center;
     margin: 10%;
@@ -18,7 +18,5 @@
 }
 
 .image{
-    height: 100px;
-    width: auto;
-    padding-left: 30%;
+    padding: 5% 10%;
 }
