--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="columns is-multiline is-mobile">
     <div class="column is-narrow-mobile is-one-quarter-desktop">
       <div class="navbar-item">
-        <p class="brand">{{ 'header.title' | translate }}</p>
+        <p class="brand"> <a (click)="navigate('home')">{{ 'header.title' | translate }}</a></p>
       </div>
     </div>
     <div class="column is-narrow-mobile is-half-desktop is-half-tablet">
