Fixed routerLink of company card.

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -23,7 +23,7 @@
       <div class="card-content">
         <div class="content">
           <p>Companies : {{companyNumber}}</p>
-          <button class="button is-primary" [routerLink]="['/computer']">Manage</button>
+          <button class="button is-primary" [routerLink]="['/company']">Manage</button>
         </div>
       </div>
     </div>
