Container not on landing page

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -8,7 +8,8 @@
       </div>
       <div class="card-content">
         <div class="content">
-          <p>Computers : {{computerNumber}}</p>
+          <h3>Computers</h3>
+          <h1>{{computerNumber}}</h1>
           <button class="button is-primary" [routerLink]="['/computer']">Manage</button>
         </div>
       </div>
@@ -22,7 +23,8 @@
       </div>
       <div class="card-content">
         <div class="content">
-          <p>Companies : {{companyNumber}}</p>
+          <h3>Companies</h3>
+          <h1>{{companyNumber}}</h1>
           <button class="button is-primary" [routerLink]="['/company']">Manage</button>
         </div>
       </div>
@@ -36,7 +38,8 @@
       </div>
       <div class="card-content">
         <div class="content">
-          <p>Users: {{userNumber}}</p>
+          <h3>Users</h3>
+          <h1>{{userNumber}}</h1>
           <button class="button is-primary" [routerLink]="['/user']">Manage</button>
         </div>
       </div>
