--- a/src/app/delete-user/delete-user.component.html
+++ b/src/app/delete-user/delete-user.component.html
@@ -1,7 +1,7 @@
 <div class="fixActionRow">
-  <h1 mat-dialog-title>Remove Computer</h1>
+  <h1 mat-dialog-title>Remove User</h1>
   <div mat-dialog-content>
-    <p>Are you sure you want to delete this computer ?</p>
+    <p>Are you sure you want to delete this user ?</p>
   </div>
   <div class="spacer"></div>
   <div mat-dialog-actions align="end">
