--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,11 +37,13 @@ svg.mat-paginator-icon:hover {
   color: $primary;
 }
 
-td.mat-column-name{
+td.mat-column-name,
+td.mat-column-username {
   color: $primary;
 }
 
-th.mat-column-name{
+th.mat-column-name,
+th.mat-column-username {
   font-weight: bold;
 }
 
@@ -77,10 +79,35 @@ mat-select:hover .mat-select-arrow {
   color: $primary;
 }
 
+.button.is-primary,
+.button.is-primary:hover {
+  background-color: $primary;
+  border-color: transparent;
+  color: #fff;
+}
+
+.button.is-primary.is-focused:not(:active),
+.button.is-primary:focus:not(:active) {
+  box-shadow: 0 0 0 0.125em rgba($primary,.25);
+}
+
+.mat-primary .mat-option.mat-selected:not(.mat-option-disabled),
+.mat-form-field.mat-focused.mat-primary .mat-select-arrow,
+mat-select:hover .mat-select-arrow {
+  color: $primary;
+}
+
+.mat-form-field.mat-focused .mat-form-field-ripple {
+  background-color: $primary;
+}
+
+.fa-angle-down:before {
+  color: $primary;
+}
+
 .brand a:hover, .brand a {
   color: $orange;
 }
-
 
 
 @import "../node_modules/bulma/sass/utilities/_all";
