--- a/src/app/create-computer/create-computer.component.html
+++ b/src/app/create-computer/create-computer.component.html
@@ -1,5 +1,5 @@
 <div class="formulaire">
-  <form ngNativeValidate [formGroup]="computerForm" (ngSubmit)="onSubmitForm()">
+  <form ngNativeValidate [formGroup]="computerForm">
     <mat-form-field>
       <input matInput placeholder="{{ 'form.name' | translate }}" required formControlName="name" id="name" >
     </mat-form-field>
@@ -32,6 +32,7 @@
       </div>
     </mat-form-field>
     <br/>
-    <button class="btn btn-primary">{{ 'form.save' | translate }}</button>
+    <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
+    <button class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
   </form>
 </div>
