--- a/src/app/update-company/update-company.component.html
+++ b/src/app/update-company/update-company.component.html
@@ -1,9 +1,10 @@
 <div *ngIf="company" class="formulaire">
-<form ngNativeValidate [formGroup]="companyForm" (ngSubmit)="onSubmitForm()">
+<form ngNativeValidate [formGroup]="companyForm">
   <mat-form-field>
     <textarea matInput formControlName="name" placeholder="name" required value="{{company.name}}"></textarea>
   </mat-form-field>
-  <div></div>
-  <button class="btn btn-primary">Enregistrer</button>
+  <br/>
+  <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
+  <button class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
 </form>
 
