--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -8,9 +8,9 @@
       </div>
       <div class="card-content">
         <div class="content">
-          <h3>Computers</h3>
-          <h1>{{computerNumber}}</h1>
-          <button class="button is-primary" [routerLink]="['/computer']">Manage</button>
+          <h3>{{ 'landing.computers' | translate }}</h3>
+          <h1>{{ computerNumber }}</h1>
+          <button class="button is-primary" [routerLink]="['/computer']">{{ 'landing.manage' | translate }}</button>
         </div>
       </div>
     </div>
@@ -23,9 +23,9 @@
       </div>
       <div class="card-content">
         <div class="content">
-          <h3>Companies</h3>
-          <h1>{{companyNumber}}</h1>
-          <button class="button is-primary" [routerLink]="['/company']">Manage</button>
+          <h3>{{ 'landing.companies' | translate }}</h3>
+          <h1>{{ companyNumber }}</h1>
+          <button class="button is-primary" [routerLink]="['/company']">{{ 'landing.manage' | translate }}</button>
         </div>
       </div>
     </div>
@@ -38,9 +38,9 @@
       </div>
       <div class="card-content">
         <div class="content">
-          <h3>Users</h3>
-          <h1>{{userNumber}}</h1>
-          <button class="button is-primary" [routerLink]="['/user']">Manage</button>
+          <h3>{{ 'landing.users' | translate }}</h3>
+          <h1>{{ userNumber }}</h1>
+          <button class="button is-primary" [routerLink]="['/user']">{{ 'landing.manage' | translate }}</button>
         </div>
       </div>
     </div>
