--- a/src/app/update-company/update-company.component.html
+++ b/src/app/update-company/update-company.component.html
@@ -7,3 +7,4 @@
     <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
     <button class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
   </form>
+</div>
