--- a/src/app/list-users/list-users.component.html
+++ b/src/app/list-users/list-users.component.html
@@ -36,7 +36,7 @@
 
       <!-- Actions Column -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'list.actions' | translate }} </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'list.action' | translate }} </th>
         <td mat-cell *matCellDef="let row" ><a class="button is-danger is-small" (click)="deleteDialog(row)">{{ 'list.delete' | translate }}</a> </td>
       </ng-container>
 
