--- a/src/app/create-company/create-company.component.html
+++ b/src/app/create-company/create-company.component.html
@@ -4,7 +4,7 @@
     <br/>
     <form ngNativeValidate [formGroup]="companyForm" (ngSubmit)="onSubmitForm()">
       <mat-form-field>
-        <input matInput formControlName="name" placeholder="{{ 'listComputers.name' | translate }}" required>
+        <input matInput formControlName="name" placeholder="{{ 'form.name' | translate }}" required>
       </mat-form-field>
       <div></div>
       <button class="btn btn-primary">Enregistrer</button>
