--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -7,9 +7,9 @@
 
 .card {
     width: 300px;
-    height: 40%;
+    height: 100%;
     text-align: center;
-    margin: 10%;
+    margin: 5% auto;
 }
 
 .list {
