--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -36,7 +36,7 @@
         </div>
       </div>
     </div>
-    <div class="column is-one-third-desktop is-half-tablet is-full-mobile">
+    <div *ngIf="isAdmin()" class="column is-one-third-desktop is-half-tablet is-full-mobile">
       <div class="container">
         <div class="card">
           <div class="card-image">
