--- a/src/app/delete-company/delete-company.component.html
+++ b/src/app/delete-company/delete-company.component.html
@@ -1,11 +1,11 @@
 <div class="fixActionRow">
-  <h1 mat-dialog-title>Remove Company</h1>
+  <h1 mat-dialog-title>{{ 'confirmation.company-title' | translate }}</h1>
   <div mat-dialog-content>
-    <p>Are you sure you want to delete this company ?</p>
+    <p>{{ 'confirmation.delete-company' | translate }}</p>
   </div>
   <div class="spacer"></div>
   <div mat-dialog-actions align="end">
-    <button class="button" (click)="cancel()">Cancel</button>
-    <button class="button is-primary" [mat-dialog-close]="true" cdkFocusInitial>Delete</button>
+    <button class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
+    <button class="button is-primary" [mat-dialog-close]="true" cdkFocusInitial>{{ 'list.delete' | translate }}</button>
   </div>
 </div>
