--- a/src/app/update-computer/update-computer.component.html
+++ b/src/app/update-computer/update-computer.component.html
@@ -1,20 +1,20 @@
 <div *ngIf="computer" class="formulaire">
   <form ngNativeValidate [formGroup]="computerForm">
     <mat-form-field>
-      <input matInput placeholder="name" formControlName="name" required value="{{computer.name}}" >
+      <input matInput placeholder="{{ 'form.name' | translate }}" formControlName="name" required value="{{computer.name}}" >
     </mat-form-field>
     <br/>
     <mat-form-field>
-      <input matInput placeholder="introduced" formControlName="introduced" value="{{computer.introduced}}">
+      <input matInput placeholder="{{ 'form.introduced' | translate }}" formControlName="introduced" value="{{computer.introduced}}">
     </mat-form-field>
     <br/>
     <mat-form-field>
-      <input matInput placeholder="discontinued" formControlName="discontinued" value="{{computer.discontinued}}">
+      <input matInput placeholder="{{ 'form.discontinued' | translate }}" formControlName="discontinued" value="{{computer.discontinued}}">
     </mat-form-field>
     <br/>
     <mat-form-field>
       <div class="form-group">
-        <label for="company">Company</label>
+        <label for="company">{{ 'form.company' | translate }}</label>
         <mat-select [(ngModel)]="computer.companyId" class="form-control" formControlName="company" id="company" required>
           <mat-option *ngFor="let company of companyList" [value]="company.id">{{company.name}}
           </mat-option>
