--- a/src/app/create-company/create-company.component.html
+++ b/src/app/create-company/create-company.component.html
@@ -3,8 +3,10 @@
     <mat-form-field>
       <input matInput formControlName="name" placeholder="name" required>
     </mat-form-field>
-    <div></div>
-    <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
-    <button class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
-  </form>
+    <div class="spacer"></div>
+    <div mat-dialog-actions align="end">
+      <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
+      <button class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
+    </div>
+    </form>
 </div>
