--- a/src/app/create-computer/create-computer.component.html
+++ b/src/app/create-computer/create-computer.component.html
@@ -21,7 +21,7 @@
       <mat-datepicker #discontinued></mat-datepicker>
     </mat-form-field>
     <br/>
-    <mat-form-field>
+    <mat-form-field id="label-company">
       <div class="form-group">
         <label for="company">{{ 'form.company' | translate }}</label>
         <mat-select class="form-control" formControlName="company" id="company" required>
@@ -30,9 +30,11 @@
         </mat-select>
       </div>
     </mat-form-field>
-    <br/>
-    <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
-    <button class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
+    <div class="spacer"></div>
+    <div mat-dialog-actions align="end">
+      <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
+      <button class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
+    </div>
   </form>
   <small *ngIf="computerForm.hasError('notValid')">Introduced date is after discontinued date</small>
 </div>
