--- a/src/app/create-computer/create-computer.component.html
+++ b/src/app/create-computer/create-computer.component.html
@@ -6,23 +6,22 @@
     <br/>
     <mat-form-field>
 
-      <input matInput [min]="minDate" [max]="maxDate" placeholder="{{ 'form.introduced' | translate }} (dd-mm-yyyy)"
-      [matDatepicker]="introduced" formControlName="introduced" id="introduced">
+      <input matInput [min]="minDate" [max]="computerForm.controls.discontinued.value" placeholder="{{ 'form.introduced' | translate }} (dd-mm-yyyy)"
+             [matDatepicker]="introduced" formControlName="introduced" id="introduced" readonly="true">
 
       <mat-datepicker-toggle matSuffix [for]="introduced"></mat-datepicker-toggle>
       <mat-datepicker #introduced></mat-datepicker>
     </mat-form-field>
     <br/>
+
     <mat-form-field>
-
-      <input matInput [min]="minDate" [max]="maxDate" placeholder="{{ 'form.discontinued' | translate }} (dd-mm-yyyy)"
-      [matDatepicker]="discontinued" formControlName="discontinued" id="discontinued">
-
+      <input matInput [min]=computerForm.controls.introduced.value [max]="maxDate" placeholder="{{ 'form.discontinued' | translate }} (dd-mm-yyyy)"
+             [matDatepicker]="discontinued" formControlName="discontinued" id="discontinued" readonly="true">
       <mat-datepicker-toggle matSuffix [for]="discontinued"></mat-datepicker-toggle>
       <mat-datepicker #discontinued></mat-datepicker>
     </mat-form-field>
     <br/>
-    <mat-form-field>
+    <mat-form-field id="label-company">
       <div class="form-group">
         <label for="company">{{ 'form.company' | translate }}</label>
         <mat-select class="form-control" formControlName="company" id="company" required>
@@ -31,8 +30,11 @@
         </mat-select>
       </div>
     </mat-form-field>
-    <br/>
-    <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
-    <button class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
+    <div class="spacer"></div>
+    <div mat-dialog-actions align="end">
+      <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
+      <button class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
+    </div>
   </form>
+  <small *ngIf="computerForm.hasError('notValid')">Introduced date is after discontinued date</small>
 </div>
