--- a/src/app/update-company/update-company.component.html
+++ b/src/app/update-company/update-company.component.html
@@ -1,10 +1,12 @@
 <div *ngIf="company" class="formulaire">
-<form ngNativeValidate [formGroup]="companyForm">
-  <mat-form-field>
-    <textarea matInput formControlName="{{ 'form.name' | translate }}" placeholder="name" required value="{{company.name}}"></textarea>
-  </mat-form-field>
-  <br/>
-  <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
-  <button class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
-</form>
-
+  <form ngNativeValidate [formGroup]="companyForm">
+    <mat-form-field>
+      <input matInput formControlName="name" placeholder="{{ 'form.name' | translate }}" required value="{{company.name}}"/>
+    </mat-form-field>
+    <div class="spacer"></div>
+    <div mat-dialog-actions align="end">
+      <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
+      <button class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
+    </div>
+  </form>
+</div>
