--- a/src/app/update-computer/update-computer.component.html
+++ b/src/app/update-computer/update-computer.component.html
@@ -1,28 +1,41 @@
 <div *ngIf="computer" class="formulaire">
-  <form ngNativeValidate [formGroup]="computerForm">
+  <form ngNativeValidate [formGroup]="computerForm"  (ngSubmit)="onSubmitForm()">
     <mat-form-field>
       <input matInput placeholder="{{ 'form.name' | translate }}" formControlName="name" required value="{{computer.name}}" >
     </mat-form-field>
     <br/>
     <mat-form-field>
-      <input matInput placeholder="{{ 'form.introduced' | translate }}" formControlName="introduced" value="{{computer.introduced}}">
+      <input matInput [min]="minDate" [max]="discontinuedDate.value" placeholder="{{ 'form.introduced' | translate }}"
+             [matDatepicker]="introduced" formControlName="introduced"
+             id="introduced" [formControl]="introducedDate" readonly="true">
+      <mat-datepicker-toggle matSuffix [for]="introduced"></mat-datepicker-toggle>
+      <mat-datepicker #introduced></mat-datepicker>
     </mat-form-field>
     <br/>
     <mat-form-field>
-      <input matInput placeholder="{{ 'form.discontinued' | translate }}" formControlName="discontinued" value="{{computer.discontinued}}">
+      <input matInput [min]="introducedDate.value" [max]="maxDate" placeholder="{{ 'form.discontinued' | translate }}"
+             [matDatepicker]="discontinued" formControlName="discontinued"
+             id="discontinued" [formControl]="discontinuedDate" readonly="true">
+      <mat-datepicker-toggle matSuffix [for]="discontinued"></mat-datepicker-toggle>
+      <mat-datepicker #discontinued></mat-datepicker>
     </mat-form-field>
     <br/>
     <mat-form-field>
-      <div class="form-group">
-        <label for="company">{{ 'form.company' | translate }}</label>
+      <div id="label-company" class="form-group">
+        <label for="company">Company</label>
         <mat-select [(ngModel)]="computer.companyId" class="form-control" formControlName="company" id="company" required>
           <mat-option *ngFor="let company of companyList" [value]="company.id">{{company.name}}
           </mat-option>
         </mat-select>
       </div>
     </mat-form-field>
+    <div class="spacer"></div>
+    <div mat-dialog-actions align="end">
+      <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
+      <button type="submit" class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
+    </div>
+    <small *ngIf="computerForm.hasError('notValid')">Introduced date is after discontinued date</small>
+
     <br/>
-    <button type="button" class="button" (click)="cancel()">{{ 'form.cancel' | translate }}</button>
-    <button type="submit" class="button is-primary" (click)="onSubmitForm()" mat-dialog-close>{{ 'form.save' | translate }}</button>
   </form>
 </div>
