--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
 <div id="home">
   <div class="columns is-multiline" >
-    <div class="column is-one-third-desktop is-half-tablet is-full-mobile">
+      <div class="column is-half-tablet is-full-mobile" [ngClass]="{'is-half-desktop': !isAdmin(),
+                                                                    'is-one-third-desktop': isAdmin() }">
       <div class="container">
         <div class="card">
           <div class="card-image">
@@ -18,7 +19,8 @@
         </div>
       </div>
     </div>
-    <div class="column is-one-third-desktop is-half-tablet is-full-mobile">
+    <div class="column is-half-tablet is-full-mobile" [ngClass]="{'is-half-desktop': !isAdmin(),
+    'is-one-third-desktop': isAdmin() }">
       <div class="container">
         <div class="card">
           <div class="card-image">
@@ -36,7 +38,7 @@
         </div>
       </div>
     </div>
-    <div class="column is-one-third-desktop is-half-tablet is-full-mobile">
+    <div *ngIf="isAdmin()" class="column is-one-third-desktop is-half-tablet is-full-mobile">
       <div class="container">
         <div class="card">
           <div class="card-image">
